# queso

./: .gitignore  LICENSE.md  README.md  config.yaml  mkdocs.yml  paths.yaml  pyproject.toml  requirements.txt
benchmarks/: circuits.py
docs/: explanation.md  how-to-guides.md  index.md  install.md  reference.md  requirements.txt  tutorials.md
docs/examples/: optimize_fisher_info.ipynb
docs/figures/: cfi_qfi_training_step.ipynb
docs/reference/: networks.md  sample.md  sensors.md  training.md
docs/references/: neural_networks.md  sensors.md
docs/source/: conf.py  index.rst  introduction.rst
docs/tutorials/: ansatze.ipynb  bayesian_inference.ipynb  fisher_info.ipynb  network_estimator.ipynb  quantum_sensing.md  sensor.ipynb  vqs.ipynb
examples/: circuits.py
experiments/: analyze_barren_plateaus.ipynb  analyze_batch.ipynb  analyze_batch_cfi.ipynb  analyze_noisy_cfi.ipynb  analyze_pure_qfi.ipynb  barren_plateaus.py  batch_cfi.py  batch_optimize_fi.py  batch_qfi.py  bayesian_net.py  bayesian_net_circuit.py  bayesian_net_flax.py  benchmark.ipynb  benchmark_estimator.py  characterize_probe_entanglement.py  circuits.py  dm_random_circuits.py  dnn.ipynb  fischer_information.py  flow_estimator.py  forward_tensor_circuit.ipynb  jax_transformer.py  noisy_circuit.py  optimize_cfi.py  optimize_fi.py  optimize_fischer_information.py  optimize_noisy_cfi.py  optimize_pure_qfi.py  optimize_qfi.py  planar.ipynb  povms.py  qfi-analysis.ipynb  qfi_entanglement_characteristics.py  qfi_scaling.ipynb  random_circuits.py  random_state_fi.ipynb  rnn_gru.py  rnn_normalizing_flow.py  run_fi.py  sample_circuit.py  (+21 more)
experiments/.old/: analyze_barren_plateaus.ipynb  analyze_batch.ipynb  analyze_pure_qfi.ipynb  barren_plateaus.py  batch_optimize_fi.py  bayesian_net.py  bayesian_net_flax.py  benchmark_simulation_runtime.ipynb  characterize_probe_entanglement.py  estimator.ipynb  optimize_fi_tensor.py  optimize_noisy_cfi.py  optimize_pure_qfi.py  run_fi.py  sampling.ipynb  simulate_fischer_information.py  test_pennylane.ipynb  test_quimb.py  transformer.py
flow/: models.py  normflow_mwe.py
jobs/: batch.py  interactive.sh  setup_runs.py  submit.sh
jobs/configs/: default.yaml
jobs/ibm/: ibm_submit_job.py  ibm_test.py
jobs/kitp_poster/: batch_dephase_noise.py  batch_estimation_example.py  batch_full_range.py  batch_ibmq.py  test_qasm.py  (+5 more)
qsense/: __init__.py  cfi.py  channels.py  entanglement.py  functions.py  gates.py  io.py  layers.py  qfi.py  simulate.py  states.py  unitaries.py  utils.py
queso/: __init__.py  benchmark_estimator.py  configs.py  estimator.py  io.py  prepare.py  quantities.py  sample_circuit.py  sample_circuit_testing.py  sensor.py  sensors.py  train.py  train_circuit.py  train_nn.py  utils.py  vqs.py
scratch/: aim_test.py  einops_test.py  example_sensor_optimize.py  flowtorch_test.py  ghz_fi.py  ghz_test.py  graph_state_fi.py  gru.py  jit_test.py  normflow_mwe.py  normflow_test.py  permute_data.py  rnn.py  sensor_refactor.py  test_dotenv.py  test_qudit.py
tests/: README_test.md  jax_prng.py  test_benchmark.py  test_devices.py  test_flags.py  test_kpartition.py  test_rng.py  test_state_simulation.py
(+68 files in other folders)
